# UFCS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  calculator.l  calculator.y  example.c  example.ufcs.c  hello.cpp  preprocess.py  ufcs.cpp  ufcs.l
